# milky2onebot

./: .gitignore  Milky.md  Milky.openapi.json  README.md  config.example.toml  main.py  onebot.md  onebot.openapi.json  pyproject.toml
src/: __init__.py  config.py  converters.py  gateway.py  message_convert.py  msgId.py
src/bridge/: app.py  service.py
src/models/milky/: entity.py  event.py  message.py
src/models/onebot/: entity.py  event.py  message.py
