[project]
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "msgspec>=0.21.1",
    "websockets>=16.0",
]
description = "Add your description here"
name = "milky2onebot"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
